# AI-ZhangXuefeng

./: .env.example  .gitignore  AGENT.md  AGENTS.md  LICENSE  README.md  package.json  pnpm-lock.yaml
apps/web/: next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx
docs/: ai-first-constitution.md  api-contract.md  architecture.md  collaboration.md  data-contract.md  development-plan.md  knowledge-governance.md  mission.md  model-assistance-architecture.md  product.md
docs/adr/: 0001-runtime-shape.md  0002-ai-first-runtime-and-knowledge-db-shape.md
infra/: postgres-compose.yml
services/api/: pyproject.toml
services/api/src/gaokao_api/: config.py  db.py  llm.py  main.py  models.py  repository.py  schemas.py  state_machine.py  web_retrieval.py
services/api/src/gaokao_api/promptpacks/: README.md  __init__.py  compare_generator.md  directional_guidance.md  dossier_updater.md  family_summary_writer.md  intent_router.md  loader.py  recommendation_generator.md  registry.json  retrieval_planner.md  safety_style_guard.md
services/api/tests/: test_api.py  test_promptpacks.py  test_state_machine.py
skills/: README.md
skills/engineering-principles/: SKILL.md
skills/frontend-assistant-ux/: SKILL.md
skills/knowledge-governance/: SKILL.md
skills/model-independence/: SKILL.md
skills/product-constitution/: SKILL.md
skills/readiness-gate/: SKILL.md
skills/recommendation-explainer/: SKILL.md
skills/workflow-orchestration/: SKILL.md
tools/ingestion/: README.md  normalize_sources.py  promote_version.py
(+5 files in other folders)
