[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gaokao-api"
version = "0.1.0"
description = "FastAPI online runtime for gaokao-mvp"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "openai>=2.0",
  "uvicorn>=0.30",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "httpx>=0.27",
  "pytest>=8.3"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src",
  "../../packages/recommendation-core/src",
  "../../packages/knowledge/src"
]
